[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Monocraft-nerd-fonts-patched.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/game over.ogv" type="VideoStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
pause_mode = 1
visible = false
margin_right = 1024.0
margin_bottom = 600.0
stream = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -35.5
margin_bottom = 35.5
custom_fonts/font = SubResource( 1 )
text = "DODGE"
align = 1
valign = 1
autowrap = true

[node name="Continue" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 200.0
margin_top = 290.0
margin_right = 423.0
margin_bottom = 316.0

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.5
margin_top = -200.0
margin_right = 113.5
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 7.0

[connection signal="start_game" from="." to="." method="new_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
